--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=cherry
-eureka.client.serviceUrl.defaultZone=http://localhost:1100/eureka/
-spring.zipkin.base-url=http://localhost:1150/
+eureka.client.serviceUrl.defaultZone=http://192.168.191.2:1100/eureka/
+spring.zipkin.base-url=http://192.168.191.2:1150/
+
+#MQ
+spring.rabbitmq.host=192.168.191.2
+spring.rabbitmq.username=root
+spring.rabbitmq.password=123456
